--- a/docker/php/vhosts/vhosts.conf
+++ b/docker/php/vhosts/vhosts.conf
@@ -1,5 +1,7 @@
 <VirtualHost *:80>
-    ServerName localhost
+    ServerName 192.168.1.214
+    ServerAlias z800
+    ServerAlias z800.local
 
     DocumentRoot /var/www/project/public
     DirectoryIndex /index.php
