--- a/docker/php/vhosts/vhosts.conf
+++ b/docker/php/vhosts/vhosts.conf
@@ -3,10 +3,10 @@
     ServerAlias z800
     ServerAlias z800.local
 
-    DocumentRoot /var/www/project/public
+    DocumentRoot /var/www/public
     DirectoryIndex /index.php
 
-    <Directory /var/www/project/public>
+    <Directory /var/www/public>
         AllowOverride None
         Order Allow,Deny
         Allow from All
@@ -14,7 +14,7 @@
         FallbackResource /index.php
     </Directory>
 
-    <Directory /var/www/project/public/bundles>
+    <Directory /var/www/project/bundles>
         FallbackResource disabled
     </Directory>
     ErrorLog /var/log/apache2/project_error.log
