--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,7 +6,8 @@ RUN apt-get update \
     && apt-get install -qq -y --no-install-recommends \
     cron \
      vim \
-     locales coreutils apt-utils git libicu-dev g++ libpng-dev libxml2-dev libzip-dev libonig-dev libxslt-dev;
+    sqlite3 \
+    locales coreutils apt-utils git libicu-dev g++ libpng-dev libxml2-dev libzip-dev libonig-dev libxslt-dev;
 
 RUN echo "pt_BR.UTF-8 UTF-8" > /etc/locale.gen && \
     locale-gen
@@ -15,7 +16,7 @@ RUN curl -sSk https://getcomposer.org/installer | php -- --disable-tls && \
    mv composer.phar /usr/local/bin/composer
 
 RUN docker-php-ext-configure intl
-RUN docker-php-ext-install pdo pdo_mysql mysqli gd opcache intl zip calendar dom mbstring zip gd xsl pdo_sqlite   && a2enmod rewrite
+RUN docker-php-ext-install pdo pdo_mysql mysqli gd opcache intl zip calendar dom mbstring zip gd xsl pdo_sqlite sqlite3   && a2enmod rewrite
 RUN pecl install apcu && docker-php-ext-enable apcu
 
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
