adicionando informação do tempo restante

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^3.8",
         "twig/intl-extra": "^3.8",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "webmozart/assert": "^1.11"
     },
     "config": {
         "allow-plugins": {
