--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "twig/extra-bundle": "^3.8",
         "twig/intl-extra": "^3.8",
         "twig/twig": "^2.12|^3.0",
-        "webmozart/assert": "^1.11"
+        "webmozart/assert": "^1.11",
+        "wgenial/numeroporextenso": "^3.0"
     },
     "config": {
         "allow-plugins": {
